解决停止实时视频异常问题

--- a/src/main/resources/static/flv.html
+++ b/src/main/resources/static/flv.html
@@ -5,7 +5,9 @@
     <title>流媒体测试</title>
     <link href="css/style.css"  rel="stylesheet" />
     <link href="css/font-awesome.min.css"  rel="stylesheet" />
+    <link rel="stylesheet" href="layui/css/layui.css" media="all">
     <script src="jquery.min.js"></script>
+    <script src="layui/layui.js"></script>
     <script src="flvplayer.js"></script>
     <script src="flv.js"></script>
     <style>
