--- a/src/main/resources/static/jt808Test.html
+++ b/src/main/resources/static/jt808Test.html
@@ -87,7 +87,7 @@
     <button id="queryLoadTestInfo" class="layui-btn layui-btn-xs layui-btn-normal">查询压力测试状态</button>
     <button id="resetLocationCount" class="layui-btn layui-btn-xs layui-btn-normal">重置位置数量</button>
     <button class="layui-btn layui-btn-xs layui-btn-normal" onClick="openJavaMediaPage()">JT1078音视频(JAVA流媒体)</button>
-    <button class="layui-btn layui-btn-xs layui-btn-normal" onClick="openGoMediaPage()">JT1078音视频(GO流媒体)</button>
+<!--    <button class="layui-btn layui-btn-xs layui-btn-normal" onClick="openGoMediaPage()">JT1078音视频(GO流媒体)</button>-->
     <br>
     <br>
     终端手机号:<input id="phoneNum" type="text">
